[package]
name = "zeek-regex-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
regex-automata = "0.4.14"

[lib]
name = "zeek_regex_backend"
crate-type = ["staticlib"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
